@@ -3,7 +3,8 @@ Process Hacker
 2.16
  * NEW/IMPROVED:
    * WindowExplorer plugin: Added Always on Top and Opacity
-   * Added version string to peview CLR tab
+   * PE viewer: Added version string to CLR tab
+   * PE viewer: Added display of delay imports
  * FIXED:
    * Fixed the IPv6-related workaround causing crashes
    * Incorrect handling of window positions
